tests/errors/array/mut_borrow_via_dynamic_index_of_uninit_array_errors.sim

        extern fn use_mut(r: &mut i64);
        fn f(i: i64) {
          a: [i64; 3];
          r: &mut i64;
          entry:
            r = &mut a[copy i];
            call use_mut(move r);
            return
        }
        